# python-project-lvl2

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: linter-check.yml  test-check.yml
gendiff/: AAA.py  __init__.py  cli.py  draft.py  file1.json  file4.json  formatter.py  generate_diff.py  generate_difference.py  generator.py  json.py  parse.py  plain.py  stylish.py  test.py  tree.py  tree_like_diff.py
gendiff/formatters/: json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: conftest.py  test_generate_diff.py
tests/fixtures/: file1.yaml  file2.json  test_result_6.txt  test_result_7.txt  test_result_8.txt
